[package]
name = "nats-spy"
version = "0.1.0"
authors = ["Alihan Dogus Yalcin <alihandogusyalcin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.18", features = ["event-stream"] }
tui = { version = "0.12", default-features = false, features = ['crossterm'] }
tui-logger = { version = "0.4", default-features = false, features = ["tui-crossterm"] }
log = "0.4.11"
nats = "0.9.1"
anyhow = "1.0.37"
clap = "2.33.3"
env_logger = "0.8.2"
scopeguard = "1.1.0"
unicode-width = "0.1.8"
chrono = "0.4"
